--- a/OSFOLCrossPlatform/OSFOLCrossPlatform.Droid/Properties/AndroidManifest.xml
+++ b/OSFOLCrossPlatform/OSFOLCrossPlatform.Droid/Properties/AndroidManifest.xml
@@ -6,5 +6,8 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.RECORD_AUDIO" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.SET_ORIENTATION" />
+	<uses-permission android:name="android.permission.WRITE_OWNER_DATA" />
+	<uses-permission android:name="android.permission.READ_OWNER_DATA" />
 	<application android:icon="@drawable/lighthouseicon" android:label="OSFOL"></application>
 </manifest>
